Fixed out of the box review

--- a/home.css
+++ b/home.css
@@ -935,7 +935,7 @@
 }
 @media(max-width: 1200px) {
   .home-cards-container1 {
-    height: 1034px;
+    height: 1086px;
     flex-direction: column;
   }
 }
@@ -977,7 +977,7 @@
     width: 100%;
   }
   .home-cards-container1 {
-    height: 1273px;
+    height: 1207px;
     padding-right: var(--dl-space-space-doubleunit);
     flex-direction: column;
     padding-bottom: 0px;
